syntax = "proto3";

import "aelf/options.proto";
import "acs5.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "AElf.Kernel.SmartContract.ExecutionPluginForAcs5.Tests.TestContract";

service Contract {
    option (aelf.csharp_state) = "AElf.Kernel.SmartContract.ExecutionPluginForAcs5.Tests.TestContract.ContractState";
    option (aelf.base) = "acs5.proto";
    rpc DummyMethod (google.protobuf.Empty) returns (google.protobuf.Empty) {
    }
}
